--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 PySide6~=6.5.2
 pyserial~=3.5
-opencv-python~=4.8.0.76
+opencv-contrib-python~=4.8.1.78
 Unidecode~=1.3.6
 numpy~=1.25.2
 pyquaternion~=0.9.9
